Added Paragraph text in index.html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kamrul Hasan</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde nulla, porro doloribus minima explicabo sapiente, voluptatem rem non soluta voluptates nemo possimus sed numquam, eum nisi atque culpa. Quis voluptas nostrum provident deserunt quasi! Repudiandae in voluptatibus dolor, maiores dicta rem eveniet voluptates magni. Voluptates obcaecati dolorum hic praesentium cupiditate?</p>
+    <button disabled="disabled">Disable</button>
 </body>
 </html>
